# excel-structure-validator

./: .gitignore  README.md  pyproject.toml
app/: config.py  pipeline.py
app/validacoes/: colunas_a_mais.py  colunas_a_menos.py  colunas_na_ordem.py  colunas_presentes.py  quantidade_linhas.py  tipos_dados.py
src/: pipeline.py
src/data/input/: conceito_enade_2022.xlsx
src/data/modelo/: arquivo_modelo.xlsx
src/utility/: config.py
src/validacoes/: __init__.py  colunas_a_mais.py  colunas_a_menos.py  colunas_na_ordem.py  colunas_presentes.py  quantidade_linhas.py  tipos_dados.py
