[tool.poetry]
name = "excel-structure-validator"
version = "0.1.0"
description = ""
authors = ["lucas.felico <lucasfeliccio@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
pandas = "^2.1.4"
loguru = "^0.7.2"
openpyxl = "^3.1.2"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
taskipy = "^1.12.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
formt = "isort ."
